Major User visible changes in Buildbot.             -*- outline -*-
  (see ChangeLog for a detailed list of changes)

* Next Release (add significant changes here)

** New /json web status

This view has lots of useful information perfectly formed for serving as input
to JavaScript status displays.  See /json/help for details.

** Jinja

TODO - write this :)

** Authorization Framework

The web-based status displays now provide fine-grained control over who can
do what - force builds, stop builds, cancel builds, etc.  See the manual for
configuration details.

** Cleanup, Bug Fixes, and Test Fixes

Thanks to help from a number of devoted contributors, this version of Buildbot
has seen a lot of house-cleaning, and even passes all of its own unit tests!

TODO - make this true

** Removals

*** Removed buildbot.status.html.Waterfall (deprecated in 0.7.6)

*** BuildmasterConfig no longer accepts 'bots' and 'sources' as keys
(deprecated in 0.7.6). Use 'slaves' and 'change_source' instead.

* Release 0.7.12 (January 21, 2010)

** New 'console' display

This is a new web status view combining the best of the (t)grid and waterfall
views.

** New 'extended' stylesheet

Buildbot has a new, much nicer stylesheet available.  Copy the file
buildbot/status/web/extended.css over your existing public_html/buildbot.css to
se it.

** Builders can be configured with an object

Instead of a list of dictionaries, builders can now specified using a
BuilderConfig object in the configuration file.  This will allow for better
argument checking and default values, and also makes it easier for users to
create subclasses to handle site-specific builder details.  The old,
dictionary-based method of configuration is still supported.

** Check for common mis-configuration in addStep

When adding a new step to a factory, either of these are acceptable:

  f.addStep(ShellCommand(command="echo hello, world", description="say hi"))